# quaro

./: readme.md  todo.md
quaro_control/: CMakeLists.txt  package.xml  quaroControl.xml  randomWalker.xml
quaro_control/config/: quaro_control.yaml  random_walker.yaml  waypoints.yaml
quaro_control/include/quaro_control/: randomWalker.hpp
quaro_control/launch/: quaro_control.launch  quaro_control_pid.launch  quaro_random_walk.launch  quaro_rqt.launch  quaro_rqt.perspective
quaro_control/scripts/: simple_leg.py
quaro_control/src/: randomWalker.cpp
quaro_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
quaro_description/launch/: display.launch
quaro_description/meshes/: AX-12A.stl  back.stl  foot.stl  front.stl  link-chest.stl  link-foot.stl  link-hip.stl  link-knee.stl  shin.stl  thigh.stl
quaro_description/robots/: quaro-empty.xacro
quaro_description/rviz/: body.rviz  leg.rviz  robot.rviz
quaro_description/test/: test_urdf_files.py  test_urdf_files.test
quaro_description/urdf/: README.md  body.xacro  leg.xacro  quaro.gazebo.xacro  quaro.xacro  robot.gazebo  robot.xacro
quaro_description/urdf/body/: body.0.0.xacro
quaro_description/urdf/common/: ax12a.xacro
quaro_description/urdf/leg/: leg.0.0.xacro
quaro_gazebo/: CMakeLists.txt  package.xml
quaro_gazebo/launch/: quaro.launch
quaro_gazebo/worlds/: empty.world
